# project-akhir-struktur-data-grup-b-raja-jambi

./: .env  .gitignore  File.docx  README.md  app.py  debug_ai.py  pyproject.toml  requirements.txt  run_list_models.py  test_ai_search.py
.streamlit/: secrets.toml
data/: ai_chats.json  bookmarks.json  history.json  users.xlsx
src/: ai_helper.py  ai_service.py  api_client.py  bookmark.py  data_manager.py  history.py  pdf_utils.py  ui_components.py
